tests/paczka1/fuzzy1/93009745.err
Error in line 13: kxSQe0HluTd A735 -1,1
Error in line 18: MfA A733 33,4
Error in line 20: 1p7nHKY A917 27,8
Error in line 24: HGADqR A733 97,1
Error in line 29: 1p7nHKY A735 3,03
Error in line 23: 1p7nHKY A213 92,2
Error in line 39: MfA A735 30,61
